# TensorView

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
TensorView/: Dims.h  Operations.h  TensorView.h  TensorViewFwd.h  Traits.h  Utils.h
cmake/: TensorViewConfig.cmake.in
include/TensorView/: Dims.h  Functions.h  Operations.h  Tensor.h  TensorIO.h  TensorView.h  TensorViewFwd.h  Traits.h
tests/: CMakeLists.txt  test_tensor_view.cpp
